# receipt-validation

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: claude.yml  claude_review.yml
configs/: accelerate_multi_gpu.yaml  accelerate_single_gpu.yaml
resources/: drug_roots.json  drugs_exclusion.csv
scripts/: configure_validation_training.sh  download_production_images.py  merge_datasets.py  prepare_coco.py  prepare_cord.py  prepare_doclaynet.py  prepare_kera_prescription.py  prepare_kera_receipts.py  run_evaluate.sh  run_extract_drug_names.sh  run_extract_receipt_stats.sh  run_inference.sh  run_training.sh  run_training_validation.sh  test_local.py
src/glm_ocr_finetune/: README.md  augment_matches.py  config.py  evaluate.py  extract_drug_names.py  extract_receipt_stats.py  inference.py  publish_model.py  train.py  train_validation.py
src/glm_ocr_finetune/data/: collator.py  matchers.py  perturbations.py  prompts.py  utils.py
src/glm_ocr_finetune/modelling/: loader.py
tests/data/: test_matchers.py  test_perturbations.py
