[project]
name = "glm-ocr-finetune"
version = "0.1.0"
description = ""
authors = [
    {name = "Mitiku Yohannes",email = "mitiku@kera.health"}
]
readme = "README.md"
requires-python = ">=3.12"

packages = [
    {include = "glm_ocr_finetune", "from" = "src"}
]

dependencies = [
    "transformers (>=5.2.0,<6.0.0)",
    "torchvision (<0.25.0)",
    "datasets (>=4.6.0,<5.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "accelerate (>=1.7.0,<2.0.0)",
    "tensorboard (>=2.19.0)",
    "peft (>=0.14.0,<1.0.0)",
    "json-repair[schema] (>=0.58.1,<0.59.0)",
    "thefuzz (>=0.22.0,<1.0.0)",
    "tqdm (>=4.66.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "kornia (>=0.8.2,<0.9.0)",
    "jellyfish>=1.2.1",
    "rapidfuzz (>=3.14.3,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
